k8s/jellyfin/overlay/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-external
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    jali-clarke.external-dns.alpha.kubernetes.io/is-external: "true"
spec:
  ingressClassName: external
  tls:
  - hosts:
    - jellyfin.jali-clarke.ca
    secretName: jali-clarke-ca
  rules:
  - host: jellyfin.jali-clarke.ca
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: jellyfin-service
            port:
              number: 80
